<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/linearlayout"
    tools:context=".UpdateTaawunActivity"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama" />

        <EditText
            android:inputType="textCapWords"
            android:id="@+id/txNamaPenyetor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jumlahuang"
            />

        <EditText
            android:id="@+id/txJumlahUang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/status"
            />


        <RadioGroup
            android:id="@+id/uprgrub"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/uplunas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lunas"
                android:textSize="15sp"
                />

            <RadioButton
                android:id="@+id/uptidaklunas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tidaklunas" />

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/upsimpan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update"
            />

    </LinearLayout>


</LinearLayout>